<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>wppf_style_picker</class>
 <widget class="QDialog" name="wppf_style_picker">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>774</width>
    <height>307</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>WPPF Plot Style</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <property name="leftMargin">
    <number>6</number>
   </property>
   <property name="topMargin">
    <number>6</number>
   </property>
   <property name="rightMargin">
    <number>6</number>
   </property>
   <property name="bottomMargin">
    <number>6</number>
   </property>
   <item row="1" column="0" colspan="2">
    <widget class="QGroupBox" name="background_group">
     <property name="title">
      <string>Background Plot</string>
     </property>
     <layout class="QGridLayout" name="gridLayout_2">
      <item row="0" column="4">
       <widget class="QLabel" name="background_line_width_label">
        <property name="text">
         <string>Line Width:</string>
        </property>
        <property name="buddy">
         <cstring>background_line_width</cstring>
        </property>
       </widget>
      </item>
      <item row="0" column="0">
       <widget class="QLabel" name="background_color_label">
        <property name="text">
         <string>Color:</string>
        </property>
        <property name="buddy">
         <cstring>background_color</cstring>
        </property>
       </widget>
      </item>
      <item row="0" column="3">
       <widget class="QComboBox" name="background_line_style"/>
      </item>
      <item row="0" column="1">
       <widget class="QPushButton" name="background_color">
        <property name="text">
         <string/>
        </property>
       </widget>
      </item>
      <item row="0" column="2">
       <widget class="QLabel" name="background_line_style_label">
        <property name="text">
         <string>Line Style:</string>
        </property>
        <property name="buddy">
         <cstring>background_line_style</cstring>
        </property>
       </widget>
      </item>
      <item row="0" column="5">
       <widget class="ScientificDoubleSpinBox" name="background_line_width">
        <property name="keyboardTracking">
         <bool>false</bool>
        </property>
        <property name="decimals">
         <number>8</number>
        </property>
        <property name="maximum">
         <double>100000.000000000000000</double>
        </property>
        <property name="singleStep">
         <double>0.100000000000000</double>
        </property>
        <property name="value">
         <double>1.000000000000000</double>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item row="3" column="0" colspan="2">
    <widget class="QDialogButtonBox" name="button_box">
     <property name="standardButtons">
      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
     </property>
    </widget>
   </item>
   <item row="0" column="0" colspan="2">
    <widget class="QGroupBox" name="simulated_spectrum_group">
     <property name="title">
      <string>Simulated Spectrum</string>
     </property>
     <layout class="QGridLayout" name="gridLayout_3">
      <item row="0" column="0">
       <widget class="QLabel" name="marker_label">
        <property name="text">
         <string>Marker:</string>
        </property>
        <property name="buddy">
         <cstring>marker</cstring>
        </property>
       </widget>
      </item>
      <item row="0" column="1">
       <widget class="QComboBox" name="marker"/>
      </item>
      <item row="0" column="2">
       <widget class="QLabel" name="marker_size_label">
        <property name="text">
         <string>Size:</string>
        </property>
        <property name="buddy">
         <cstring>marker_size</cstring>
        </property>
       </widget>
      </item>
      <item row="0" column="3">
       <widget class="ScientificDoubleSpinBox" name="marker_size">
        <property name="keyboardTracking">
         <bool>false</bool>
        </property>
        <property name="decimals">
         <number>8</number>
        </property>
        <property name="minimum">
         <double>0.001000000000000</double>
        </property>
        <property name="maximum">
         <double>10000000.000000000000000</double>
        </property>
        <property name="value">
         <double>1.000000000000000</double>
        </property>
       </widget>
      </item>
      <item row="0" column="4">
       <widget class="QLabel" name="face_color_label">
        <property name="text">
         <string>Face color:</string>
        </property>
        <property name="buddy">
         <cstring>face_color</cstring>
        </property>
       </widget>
      </item>
      <item row="0" column="5">
       <widget class="QPushButton" name="face_color">
        <property name="text">
         <string/>
        </property>
        <property name="checkable">
         <bool>true</bool>
        </property>
        <property name="checked">
         <bool>false</bool>
        </property>
       </widget>
      </item>
      <item row="0" column="6">
       <widget class="QLabel" name="edge_color_label">
        <property name="text">
         <string>Edge color:</string>
        </property>
        <property name="buddy">
         <cstring>edge_color</cstring>
        </property>
       </widget>
      </item>
      <item row="0" column="7">
       <widget class="QPushButton" name="edge_color">
        <property name="text">
         <string/>
        </property>
        <property name="checkable">
         <bool>true</bool>
        </property>
        <property name="checked">
         <bool>false</bool>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item row="2" column="0" colspan="2">
    <widget class="QGroupBox" name="amorphous_group">
     <property name="title">
      <string>Amorphous Plot</string>
     </property>
     <layout class="QGridLayout" name="gridLayout_4">
      <item row="0" column="0">
       <widget class="QLabel" name="amorphous_color_label">
        <property name="text">
         <string>Color:</string>
        </property>
        <property name="buddy">
         <cstring>amorphous_color</cstring>
        </property>
       </widget>
      </item>
      <item row="0" column="1">
       <widget class="QPushButton" name="amorphous_color">
        <property name="text">
         <string/>
        </property>
       </widget>
      </item>
      <item row="0" column="2">
       <widget class="QLabel" name="amorphous_line_style_label">
        <property name="text">
         <string>Line Style:</string>
        </property>
        <property name="buddy">
         <cstring>amorphous_line_style</cstring>
        </property>
       </widget>
      </item>
      <item row="0" column="3">
       <widget class="QComboBox" name="amorphous_line_style"/>
      </item>
      <item row="0" column="4">
       <widget class="QLabel" name="amorphous_line_width_label">
        <property name="text">
         <string>Line Width:</string>
        </property>
        <property name="buddy">
         <cstring>amorphous_line_width</cstring>
        </property>
       </widget>
      </item>
      <item row="0" column="5">
       <widget class="ScientificDoubleSpinBox" name="amorphous_line_width">
        <property name="keyboardTracking">
         <bool>false</bool>
        </property>
        <property name="decimals">
         <number>8</number>
        </property>
        <property name="maximum">
         <double>100000.000000000000000</double>
        </property>
        <property name="singleStep">
         <double>0.100000000000000</double>
        </property>
        <property name="value">
         <double>1.000000000000000</double>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>ScientificDoubleSpinBox</class>
   <extends>QDoubleSpinBox</extends>
   <header>scientificspinbox.h</header>
  </customwidget>
 </customwidgets>
 <tabstops>
  <tabstop>marker</tabstop>
  <tabstop>marker_size</tabstop>
  <tabstop>face_color</tabstop>
  <tabstop>edge_color</tabstop>
  <tabstop>background_color</tabstop>
  <tabstop>background_line_style</tabstop>
  <tabstop>background_line_width</tabstop>
  <tabstop>amorphous_color</tabstop>
  <tabstop>amorphous_line_style</tabstop>
  <tabstop>amorphous_line_width</tabstop>
 </tabstops>
 <resources/>
 <connections>
  <connection>
   <sender>button_box</sender>
   <signal>accepted()</signal>
   <receiver>wppf_style_picker</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>296</x>
     <y>80</y>
    </hint>
    <hint type="destinationlabel">
     <x>196</x>
     <y>47</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>button_box</sender>
   <signal>rejected()</signal>
   <receiver>wppf_style_picker</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>296</x>
     <y>80</y>
    </hint>
    <hint type="destinationlabel">
     <x>196</x>
     <y>47</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
